# flow-alpha

./: .gitignore  Specifications.md
emulator/: CMakeLists.txt  Makefile
emulator/flowalpha/: main.c
emulator/flowalpha/interface/: computer.c
emulator/flowalpha/memory/: comp_mem.c
emulator/flowalpha/process/: execute.c  load.c
emulator/include/: emulator.h
emulator/programs/: simple_test.fch
fca/compiler/: CMakeLists.txt  Makefile
fca/compiler/flowcmp/: main.cpp  utils.cpp
fca/compiler/flowcmp/compiler/: compile.cpp  preprocess.cpp
fca/compiler/flowcmp/lexer/: lexer.cpp
fca/compiler/flowinspect/: main.cpp
fca/compiler/flowreverse/: main.cpp
fca/compiler/include/: flowcmp.hpp  lexer.hpp  utils.hpp
fca/compiler/tests/: out.fch  test.fca
fca/examples/: test.fca
fca/syntax/: fca.vim
